--- a/coder-swag/coder-swag/Base.lproj/Main.storyboard
+++ b/coder-swag/coder-swag/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -86,11 +87,104 @@
                     <navigationItem key="navigationItem" title="CODER SWAG" id="70P-nO-iga"/>
                     <connections>
                         <outlet property="categoryTable" destination="ftb-1M-ioO" id="6In-GL-YTR"/>
+                        <segue destination="jJY-Zf-0Id" kind="show" id="11V-DI-IzL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="477.60000000000002" y="132.68365817091455"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Op8-wA-R1u">
+            <objects>
+                <viewController id="jJY-Zf-0Id" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BDh-QB-gf6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PRODUCTS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TU2-G4-Vuj">
+                                <rect key="frame" x="8" y="30" width="95" height="25"/>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="8vg-Yr-Fb2">
+                                <rect key="frame" x="0.0" y="71" width="375" height="532"/>
+                                <color key="backgroundColor" red="0.99019607843137258" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yWR-2u-xgT">
+                                    <size key="itemSize" width="178" height="260"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Sz8-fk-LAD" customClass="CollectionCell" customModule="coder_swag" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="178" height="260"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="178" height="260"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="shirt01" translatesAutoresizingMaskIntoConstraints="NO" id="LCm-Zt-sTm">
+                                                    <rect key="frame" x="0.0" y="0.0" width="178" height="177"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="LCm-Zt-sTm" secondAttribute="height" multiplier="179:178" id="Asn-rb-MKA"/>
+                                                        <constraint firstAttribute="width" constant="178" id="kxW-jA-cyp"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$25" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Efe-jM-1DG">
+                                                    <rect key="frame" x="0.0" y="236.5" width="178" height="23.5"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                                    <color key="textColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DevSlopes Logo Graphic T-Shirt" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rd7-7P-pnv">
+                                                    <rect key="frame" x="0.0" y="182" width="178" height="41"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="15"/>
+                                                    <color key="textColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.95283776519999996" green="0.95300072430000005" blue="0.95282751320000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="Rd7-7P-pnv" secondAttribute="trailing" id="0bw-3O-DcK"/>
+                                            <constraint firstItem="Rd7-7P-pnv" firstAttribute="top" secondItem="LCm-Zt-sTm" secondAttribute="bottom" constant="5" id="5iI-4z-ia2"/>
+                                            <constraint firstAttribute="bottom" secondItem="Efe-jM-1DG" secondAttribute="bottom" id="9xc-QE-4Wp"/>
+                                            <constraint firstItem="Efe-jM-1DG" firstAttribute="leading" secondItem="Rd7-7P-pnv" secondAttribute="leading" id="RqH-vO-mqw"/>
+                                            <constraint firstItem="Efe-jM-1DG" firstAttribute="leading" secondItem="Sz8-fk-LAD" secondAttribute="leading" id="Up2-rw-WWX"/>
+                                            <constraint firstItem="Rd7-7P-pnv" firstAttribute="leading" secondItem="Sz8-fk-LAD" secondAttribute="leading" id="dct-pb-BVI"/>
+                                            <constraint firstItem="Rd7-7P-pnv" firstAttribute="leading" secondItem="LCm-Zt-sTm" secondAttribute="leading" id="hvB-Xm-qxQ"/>
+                                            <constraint firstAttribute="trailing" secondItem="Efe-jM-1DG" secondAttribute="trailing" id="se7-h0-OGf"/>
+                                            <constraint firstAttribute="trailing" secondItem="LCm-Zt-sTm" secondAttribute="trailing" id="t7V-yw-bOG"/>
+                                            <constraint firstItem="LCm-Zt-sTm" firstAttribute="top" secondItem="Sz8-fk-LAD" secondAttribute="top" id="xbh-eV-VlZ"/>
+                                            <constraint firstItem="LCm-Zt-sTm" firstAttribute="leading" secondItem="Sz8-fk-LAD" secondAttribute="leading" id="xpg-CS-JkI"/>
+                                        </constraints>
+                                        <size key="customSize" width="178" height="260"/>
+                                        <connections>
+                                            <outlet property="productImage" destination="LCm-Zt-sTm" id="OAw-aZ-geJ"/>
+                                            <outlet property="productPrice" destination="Efe-jM-1DG" id="Afl-IZ-hwN"/>
+                                            <outlet property="productTitle" destination="Rd7-7P-pnv" id="cta-Rx-w5W"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="TU2-G4-Vuj" firstAttribute="top" secondItem="Ko3-CP-LOb" secondAttribute="top" constant="30" id="0h5-Dc-rmh"/>
+                            <constraint firstItem="Ko3-CP-LOb" firstAttribute="trailing" secondItem="8vg-Yr-Fb2" secondAttribute="trailing" id="FPS-OA-wLj"/>
+                            <constraint firstItem="TU2-G4-Vuj" firstAttribute="leading" secondItem="Ko3-CP-LOb" secondAttribute="leading" constant="8" id="Fxw-rc-qdF"/>
+                            <constraint firstItem="Ko3-CP-LOb" firstAttribute="bottom" secondItem="8vg-Yr-Fb2" secondAttribute="bottom" id="X4j-iW-l1x"/>
+                            <constraint firstItem="8vg-Yr-Fb2" firstAttribute="top" secondItem="TU2-G4-Vuj" secondAttribute="bottom" constant="16" id="iJj-Kd-yZf"/>
+                            <constraint firstItem="8vg-Yr-Fb2" firstAttribute="leading" secondItem="Ko3-CP-LOb" secondAttribute="leading" id="lw7-xL-SmA"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Ko3-CP-LOb"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E7F-w1-Q0s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1336.8" y="132.68365817091455"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6et-69-zKZ">
@@ -100,7 +194,14 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="siU-Kn-heJ">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="barTintColor" red="0.3411764705882353" green="0.15294117647058825" blue="0.15686274509803921" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -114,5 +215,6 @@
     </scenes>
     <resources>
         <image name="digital" width="1024" height="703"/>
+        <image name="shirt01" width="500" height="500"/>
     </resources>
 </document>
