This is final app.

--- a/coder-swag/coder-swag/Base.lproj/Main.storyboard
+++ b/coder-swag/coder-swag/Base.lproj/Main.storyboard
@@ -87,17 +87,17 @@
                     <navigationItem key="navigationItem" title="CODER SWAG" id="70P-nO-iga"/>
                     <connections>
                         <outlet property="categoryTable" destination="ftb-1M-ioO" id="6In-GL-YTR"/>
-                        <segue destination="jJY-Zf-0Id" kind="show" id="11V-DI-IzL"/>
+                        <segue destination="jJY-Zf-0Id" kind="show" identifier="ProductsCV" id="11V-DI-IzL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="477.60000000000002" y="132.68365817091455"/>
         </scene>
-        <!--View Controller-->
+        <!--ProductsVC-->
         <scene sceneID="Op8-wA-R1u">
             <objects>
-                <viewController id="jJY-Zf-0Id" sceneMemberID="viewController">
+                <viewController id="jJY-Zf-0Id" customClass="ProductsVC" customModule="coder_swag" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="BDh-QB-gf6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -118,7 +118,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Sz8-fk-LAD" customClass="CollectionCell" customModule="coder_swag" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductCell" id="Sz8-fk-LAD" customClass="ProductCell" customModule="coder_swag" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="178" height="260"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -181,6 +181,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Ko3-CP-LOb"/>
                     </view>
+                    <connections>
+                        <outlet property="productsCollection" destination="8vg-Yr-Fb2" id="aoe-dg-rtB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E7F-w1-Q0s" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
